--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,16 @@
 </head>
 <body>
   <header>
-    <div><strong>MySite</strong></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="blog.html">Blog</a>
-      <a href="work.html">Work</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <div class="container">
     <h2>Blog</h2>
     <p>Welcome to my blog! I share thoughts on ....</p>
