--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div><strong>MySite</strong></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="blog.html">Blog</a>
-      <a href="work.html">Work</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+ <header>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <div class="container">
     <h2>Welcome to My Site</h2>
     <p>This is the homepage. Use the links above to explore different sections of my personal website.</p>
