--- a/work.html
+++ b/work.html
@@ -9,16 +9,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div><strong>MySite</strong></div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="blog.html">Blog</a>
-      <a href="work.html">Work</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+<header>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <div class="container">
     <h2>My Work</h2>
     <p>This page highlights some of my projects. Tableau dashboards, visualizations, etc. go here.</p>
