--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header>
-  <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+  <header>
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="container center-links">
+    <h2>Welcome</h2>
+    <ul class="home-links">
       <li><a href="about.html">About Me</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="work.html">Work</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-  </nav>
-</header>
-  <div class="container">
-    <h2>Welcome to My Site</h2>
-    <p>This is the homepage. Use the links above to explore different sections of my personal website.</p>
   </div>
+
   <footer>
     &copy; 2025 Your Name. All rights reserved.
   </footer>
