--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Sunil Narla. All rights reserved.
   </footer>
 </body>
 </html>
