--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 </header>
   <div class="container">
     <h2>Contact Me</h2>
-    <p>You can reach me by <a href="mailto:you@example.com">email</a> or follow me on LinkedIn and GitHub.</p>
+    <p>You can reach me by <a href="mailto:sn@n4rla.com">email</a> or follow me on LinkedIn and GitHub.</p>
   </div>
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Sunil Narla. All rights reserved.
   </footer>
 </body>
