--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <p>Hi! I'm Sunil...</p>
   </div>
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Sunil Narla. All rights reserved.
   </footer>
 </body>
 </html>
