--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     </nav>
   </header>
 
-  <div class="container center-links">
-    <h2>Welcome</h2>
-    <ul class="home-links">
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <div class="home-links">
+  <ul>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="work.html">Work</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</div>
 
   <footer>
     &copy; 2025 Sunil Narla. All rights reserved.
