--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
   <header>
     <nav class="navbar">
       <ul class="nav-links">
@@ -18,15 +19,15 @@
       </ul>
     </nav>
   </header>
-
-  <div class="home-links">
-  <ul>
-    <li><a href="about.html">About Me</a></li>
-    <li><a href="blog.html">Blog</a></li>
-    <li><a href="work.html">Work</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</div>
+  <section class="hero">
+    <ul class="home-links">
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </section>
+  
 
   <footer>
     &copy; 2025 Sunil Narla. All rights reserved.
