--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   
   <header>
+  
+  <div class="logo">
+    <img src="image.png" alt="SN Logo" />
+  </div>
+
     <nav class="navbar">
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
