--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   
   <div class="logo">
     <img src="image.png" alt="SN Logo" />
+    <div class="menu-toggle" id="menu-toggle">
+  &#9776;
+</div>
   </div>
 
     <nav class="navbar">
@@ -37,5 +40,14 @@
   <footer>
     &copy; 2025 Sunil Narla. All rights reserved.
   </footer>
+
+  <script>
+  const menuToggle = document.getElementById('menu-toggle');
+  const nav = document.querySelector('nav');
+
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
+</script>
 </body>
 </html>
