--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 </div>
   </div>
 
-    <nav class="navbar">
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+   <nav>
+  <div class="navbar">
+    <ul class="nav-links">
+      ...
+    </ul>
+  </div>
+</nav>
   </header>
   <section class="hero">
     <ul class="home-links">
