--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   
   <div class="logo">
     <img src="image.png" alt="SN Logo" />
-    <div class="menu-toggle" id="menu-toggle">
-  &#9776;
-</div>
+  <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </div>
 
     <nav class="navbar">
