--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
     &copy; 2025 Sunil Narla. All rights reserved.
   </footer>
 
-  <script>
+<script>
   const menuToggle = document.getElementById('menu-toggle');
   const nav = document.querySelector('nav');
 
   menuToggle.addEventListener('click', () => {
     nav.classList.toggle('active');
+    menuToggle.classList.toggle('active');
   });
 </script>
 </body>
