--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
   <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   <nav>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="work.html">Work</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
   </nav>
 </header>
 
 <section class="hero">
   <ul class="home-links">
-    <li><a href="#">About Me</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">Work</a></li>
-    <li><a href="#">Contact</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="work.html">Work</a></li>
+  <li><a href="contact.html">Contact</a></li>
   </ul>
 </section>
 
