--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
   </nav>
 </header>
 
-<section class="hero">
-  <ul class="home-links">
-  <li><a href="about.html">About</a></li>
-  <li><a href="blog.html">Blog</a></li>
-  <li><a href="work.html">Work</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  </ul>
+<section class="page-layout">
+  <div class="home-links">
+    <ul>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="work.html">Work</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+
+  <div class="hero">
+    <!-- Background image will go here -->
+  </div>
 </section>
 
 <footer>
